# photoshop-connection

./: .coverageac  .gitignore  .readthedocs.yaml  .style.yapf  .travis.yml  CLAUDE.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
docs/: conf.py  index.rst  overview.rst  requirements.txt
docs/modules/: photoshop.crypto.rst  photoshop.protocol.rst  photoshop.rst
src/photoshop/: __init__.py  api.py  crypto.py  photoshop_connection.py  protocol.py
src/photoshop/api/: networkEventSubscribe.js.j2  networkEventUnsubscribe.js.j2  open.js.j2  sendDocumentInfoToNetworkClient.js.j2  sendDocumentStreamToNetworkClient.js.j2  sendDocumentThumbnailToNetworkClient.js  sendLayerShapeToNetworkClient.js.j2  sendLayerThumbnailToNetworkClient.js.j2
tests/: conftest.py  mock.py  test_api.py  test_crypto.py  test_init.py  test_photoshop_connection.py  test_protocol.py
