[project]
name = "photoshop-connection"
version = "0.2.0"
description = "Python package for Photoshop Connection"
authors = [{name = "Kota Yamaguchi", email = "KotaYamaguchi1984@gmail.com"}]
license = "MIT"
readme = "README.rst"
requires-python = ">3.9.1,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "cryptography>=44.0",
  "jinja2>=3.0",
  "pillow>=10.0",
]

[project.urls]
Repository = "https://github.com/kyamagu/photoshop-connection"
Documentation = "https://photoshop-connection.readthedocs.io"

[project.optional-dependencies]
eslint = [
  "esprima>=4.0",
]

[dependency-groups]
dev = [
  "esprima>=4.0",
  "pytest>=7.0",
  "pytest-cov>=7.0",
  "pytest-timeout>=2.1",
  "ruff>=0.1.0",
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/photoshop"]

[tool.hatch.build]
include = [
    "src/photoshop/**/*.py",
    "src/photoshop/**/*.js.j2",
]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=photoshop"
testpaths = ["tests"]
